@@ -14,10 +14,10 @@ index ddb7a1af55..a7365347db 100644
  # TODO we should fix the long-line errors in yacc/*.c
  /yacc/*.[ch]         typo.very-long-line=may
 diff --git a/Changes b/Changes
-index 967c8bf974..4aa1820b5b 100644
+index b72c9088ad..c2ebd62410 100644
 --- a/Changes
 +++ b/Changes
-@@ -467,13 +467,13 @@ OCaml 4.14.0
+@@ -471,13 +471,13 @@ OCaml 4.14.0
  - #10549: Stack overflow detection and naked pointers checking for ARM64
    (Xavier Leroy, review by Stephen Dolan)
  
@@ -33,7 +33,7 @@ index 967c8bf974..4aa1820b5b 100644
     code or an OCaml thread stops
    (Xavier Leroy, review by David Allsopp and Damien Doligez)
  
-@@ -577,6 +577,9 @@ OCaml 4.14.0
+@@ -581,6 +581,9 @@ OCaml 4.14.0
  - #10786: The implementation of Complex.norm now uses Float.hypot.
    (Christophe Troestler, review by David Allsopp and Xavier Leroy)
  
@@ -43,7 +43,7 @@ index 967c8bf974..4aa1820b5b 100644
  ### Other libraries:
  
  - #10192: Add support for Unix domain sockets on Windows and use them
-@@ -835,6 +838,9 @@ OCaml 4.14.0
+@@ -839,6 +842,9 @@ OCaml 4.14.0
  
  ### Build system:
  
@@ -6890,7 +6890,7 @@ index 0000000000..340077091b
 +  * x86 we require the caml_extra_params symbol from the RTS. */
 diff --git a/diff-against-trunk-system.diff b/diff-against-trunk-system.diff
 new file mode 100644
-index 0000000000..eb709eb496
+index 0000000000..a072cae88a
 --- /dev/null
 +++ b/diff-against-trunk-system.diff
 @@ -0,0 +1,6805 @@
@@ -6910,10 +6910,10 @@ index 0000000000..eb709eb496
 + # TODO we should fix the long-line errors in yacc/*.c
 + /yacc/*.[ch]         typo.very-long-line=may
 +diff --git a/Changes b/Changes
-+index 967c8bf974..4aa1820b5b 100644
++index b72c9088ad..c2ebd62410 100644
 +--- a/Changes
 ++++ b/Changes
-+@@ -467,13 +467,13 @@ OCaml 4.14.0
++@@ -471,13 +471,13 @@ OCaml 4.14.0
 + - #10549: Stack overflow detection and naked pointers checking for ARM64
 +   (Xavier Leroy, review by Stephen Dolan)
 + 
@@ -6929,7 +6929,7 @@ index 0000000000..eb709eb496
 +    code or an OCaml thread stops
 +   (Xavier Leroy, review by David Allsopp and Damien Doligez)
 + 
-+@@ -577,6 +577,9 @@ OCaml 4.14.0
++@@ -581,6 +581,9 @@ OCaml 4.14.0
 + - #10786: The implementation of Complex.norm now uses Float.hypot.
 +   (Christophe Troestler, review by David Allsopp and Xavier Leroy)
 + 
@@ -6939,7 +6939,7 @@ index 0000000000..eb709eb496
 + ### Other libraries:
 + 
 + - #10192: Add support for Unix domain sockets on Windows and use them
-+@@ -835,6 +838,9 @@ OCaml 4.14.0
++@@ -839,6 +842,9 @@ OCaml 4.14.0
 + 
 + ### Build system:
 + 
